--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿arabic-reshaper==3.0.0
+arabic-reshaper==3.0.0
 asgiref==3.8.1
 asn1crypto==1.5.1
 Brotli==1.1.0
@@ -14,6 +14,7 @@ defusedxml==0.7.1
 Django==5.2
 django-jazzmin==3.0.1
 django-jet-reboot==1.3.10
+dj-database-url==0.5.0
 feedparser==6.0.11
 fonttools==4.57.0
 gunicorn==23.0.0
@@ -50,6 +51,4 @@ webencodings==0.5.1
 whitenoise==6.9.0
 xhtml2pdf==0.2.17
 zopfli==0.2.3.post1
-psycopg==3.1.10
-dj-database-url==0.5.0
 psycopg2-binary>=2.9.7
